Use foreach instead of iterator. Add @Override. Use Integer.valueOf instead of new Integer. Remove new String(String).